--- a/studio.html
+++ b/studio.html
@@ -368,7 +368,7 @@ Guilbert Nathaniel / Directeur général Medyra Associates / © Medyra.Associate
 <!-- SERVICES -->
 <section class="section" id="services">
   <div class="content">
-    <h1>Servces</h1>
+    <h1>Services</h1>
     <div class="grid">
       <div class="card"><h3>Communication</h3><p>Recherche responsable communication. Postulez dans l'onglet contact dans le HUB'</p></div>
 
